# entanglement-optimization

./: .gitignore  ACN_theory.py  ACN_theory2.py  ACN_theory3  ANALYTIC_EXPRESSIONS.md  CreateNineRods.py  CreateThreeRods.py  GPU_PIPELINE_OVERVIEW.md  LCP_example.py  LICENSE  README.md  SIMPLE_ROD_VIEWER.md  Segmenter.py  Segments.py  TestAraiFormula.py  TestMinZ.py  amend_analysis_data.py  analysis.py  analysis_PhaseDiagram.py  analysis_PhaseDiagram2.py  analysis_all.py  analysis_entrel.py  analysis_entrel2.py  analysis_entrel3.py  analysis_entrel4.py  analysis_entrel5.py  analysis_entrel_final.py  analysis_micromechanics.py  analysis_packings.py  analysis_perturbed_entrel_final.py  analysis_perturbed_entrel_statistics.py  analyze_sim_dataset.py  archive.sh  ball_spiral.py  batch_entangle_gpu.py  batch_nudge.py  batch_packing.py  batch_relax_gpu.py  benchmark_aabb.py  benchmark_backends.py  (+170 more)
analysis/: .env  ACN_theory.py  CheckContactNumbers.py  TestElongation.py  alpha200_centerlines_comparison.py  analysis.py  analysis_PhaseDiagram.py  analysis_entanglement.py  analysis_entrel2.py  analysis_entrel4.py  analysis_entrel5.py  analysis_entrel6.py  analysis_entrel_final2.py  analysis_entrel_final3.py  analysis_micromechanics.py  analysis_perturbed_entrel_final.py  analysis_perturbed_entrel_final2.py  analysis_perturbed_entrel_for_fixed_AR.py  analysis_shearStress.py  analysis_single_snapshot.py  analyze_brownian.py  chain_collisions.py  check_sanity_nudging.py  collision_relaxation_01.py  confinement_and_entanglement_02.py  convert_edge_and_node.py  create_nonintersecting_packing.py  create_skew_packing.py  debug_fields.py  debug_filament_fields.py  delete_this.py  discrete_rod.py  distance_jacobian.py  drawPlots_experiment.py  drawPlots_hangMotions.py  drawPlots_packingVisuals.py  drawPlots_phaseDiagram3.py  drawPlots_rodContacts_JostleCarrotCake5.py  drawPlots_rodEntanglement.py  (+72 more)
(+181 files in other folders)
