[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entanglement-optimization"
version = "0.2.0"
description = "JAX-based optimization of entangled rod packings"
authors = [{ name = "Yeonsu Jung" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.22",
  "jax>=0.4",
]

[project.optional-dependencies]
gpu  = ["jax[cuda12]>=0.4"]
viz  = ["polyscope", "imageio"]
dev  = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/yeonsu-jung/entanglement-optimization"

[project.scripts]
eo-entangle    = "entanglement_optimization.cli.entangle:main"
eo-relax       = "entanglement_optimization.cli.relax:main"
eo-perturb     = "entanglement_optimization.cli.perturb:main"
eo-make-video  = "entanglement_optimization.cli.make_video:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]
